# serializer version: 1
# name: test_device_tracker_empty[captur_fuel]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'device_tracker',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'device_tracker.reg_number_location',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Location',
      'platform': 'renault',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'location',
      'unique_id': 'vf1aaaaa555777123_location',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_device_tracker_empty[captur_fuel].1
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'REG-NUMBER Location',
        'source_type': <SourceType.GPS: 'gps'>,
      }),
      'context': <ANY>,
      'entity_id': 'device_tracker.reg_number_location',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
  ])
# ---
# name: test_device_tracker_empty[captur_phev]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'device_tracker',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'device_tracker.reg_number_location',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Location',
      'platform': 'renault',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'location',
      'unique_id': 'vf1aaaaa555777123_location',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_device_tracker_empty[captur_phev].1
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'REG-NUMBER Location',
        'source_type': <SourceType.GPS: 'gps'>,
      }),
      'context': <ANY>,
      'entity_id': 'device_tracker.reg_number_location',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
  ])
# ---
# name: test_device_tracker_empty[twingo_3_electric]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'device_tracker',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'device_tracker.reg_number_location',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Location',
      'platform': 'renault',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'location',
      'unique_id': 'vf1aaaaa555777999_location',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_device_tracker_empty[twingo_3_electric].1
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'REG-NUMBER Location',
        'source_type': <SourceType.GPS: 'gps'>,
      }),
      'context': <ANY>,
      'entity_id': 'device_tracker.reg_number_location',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
  ])
# ---
# name: test_device_tracker_empty[zoe_40]
  list([
  ])
# ---
# name: test_device_tracker_empty[zoe_40].1
  list([
  ])
# ---
# name: test_device_tracker_empty[zoe_50]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'device_tracker',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'device_tracker.reg_number_location',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Location',
      'platform': 'renault',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'location',
      'unique_id': 'vf1aaaaa555777999_location',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_device_tracker_empty[zoe_50].1
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'REG-NUMBER Location',
        'source_type': <SourceType.GPS: 'gps'>,
      }),
      'context': <ANY>,
      'entity_id': 'device_tracker.reg_number_location',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
  ])
# ---
# name: test_device_trackers[captur_fuel]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'device_tracker',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'device_tracker.reg_number_location',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Location',
      'platform': 'renault',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'location',
      'unique_id': 'vf1aaaaa555777123_location',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_device_trackers[captur_fuel].1
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'REG-NUMBER Location',
        'gps_accuracy': 0,
        'latitude': 48.1234567,
        'longitude': 11.1234567,
        'source_type': <SourceType.GPS: 'gps'>,
      }),
      'context': <ANY>,
      'entity_id': 'device_tracker.reg_number_location',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'not_home',
    }),
  ])
# ---
# name: test_device_trackers[captur_phev]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'device_tracker',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'device_tracker.reg_number_location',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Location',
      'platform': 'renault',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'location',
      'unique_id': 'vf1aaaaa555777123_location',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_device_trackers[captur_phev].1
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'REG-NUMBER Location',
        'gps_accuracy': 0,
        'latitude': 48.1234567,
        'longitude': 11.1234567,
        'source_type': <SourceType.GPS: 'gps'>,
      }),
      'context': <ANY>,
      'entity_id': 'device_tracker.reg_number_location',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'not_home',
    }),
  ])
# ---
# name: test_device_trackers[twingo_3_electric]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'device_tracker',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'device_tracker.reg_number_location',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Location',
      'platform': 'renault',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'location',
      'unique_id': 'vf1aaaaa555777999_location',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_device_trackers[twingo_3_electric].1
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'REG-NUMBER Location',
        'gps_accuracy': 0,
        'latitude': 48.1234567,
        'longitude': 11.1234567,
        'source_type': <SourceType.GPS: 'gps'>,
      }),
      'context': <ANY>,
      'entity_id': 'device_tracker.reg_number_location',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'not_home',
    }),
  ])
# ---
# name: test_device_trackers[zoe_40]
  list([
  ])
# ---
# name: test_device_trackers[zoe_40].1
  list([
  ])
# ---
# name: test_device_trackers[zoe_50]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'device_tracker',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'device_tracker.reg_number_location',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Location',
      'platform': 'renault',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'location',
      'unique_id': 'vf1aaaaa555777999_location',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_device_trackers[zoe_50].1
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'REG-NUMBER Location',
        'gps_accuracy': 0,
        'latitude': 48.1234567,
        'longitude': 11.1234567,
        'source_type': <SourceType.GPS: 'gps'>,
      }),
      'context': <ANY>,
      'entity_id': 'device_tracker.reg_number_location',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'not_home',
    }),
  ])
# ---
